# Car-Warehouse-Management-System-using-C-

./: .gitignore  AI_REVIEW_CODEBASE.md  CMakeLists.txt  COMP2034_CW1_Planning_Summary.md  CW1_AI_Review_Context.md  CW1_Changed_Files_For_AI.md  README.md
.claude/: settings.json  settings.local.json
database/: cw1_blockchain.db  fuel_prices.db
include/ai/: ChatbotService.hpp
include/blockchain/: Block.hpp  BlockBase.hpp  BlockFormatter.hpp  BlockStage.hpp  Blockchain.hpp  LinkedBlockchainView.hpp  Validation.hpp
include/models/: CarRecord.hpp
include/security/: AccessControl.hpp  Auth.hpp  PendingApprovalManager.hpp  Role.hpp  SecurityUtil.hpp  User.hpp
include/ui/: GuiApp.hpp
include/utils/: AuditLog.hpp  BranchMap.hpp  DatabaseManager.hpp  FuelPriceManager.hpp  FuelPriceTypes.hpp  HashUtil.hpp  OperationTimer.hpp  StringUtil.hpp  TimeUtil.hpp  VehicleData.hpp
src/: main.cpp  main_cli.cpp  main_gui.cpp
src/ai/: ChatbotService.cpp
src/blockchain/: Block.cpp  BlockStage.cpp  Blockchain.cpp  LinkedBlockchainView.cpp  Validation.cpp
src/models/: CarRecord.cpp
src/security/: AccessControl.cpp  Auth.cpp  PendingApprovalManager.cpp  SecurityUtil.cpp
src/ui/: AIAssistantPanel.cpp  AuthPanels.cpp  ChainPanels.cpp  DashboardPanel.cpp  GuiShared.cpp  Layout.cpp  ReportExporter.cpp  VehiclePanels.cpp
src/utils/: AuditLog.cpp  BranchMap.cpp  DatabaseManager.cpp  FuelPriceManager.cpp  HashUtil.cpp  StringUtil.cpp  TimeUtil.cpp  VehicleData.cpp
